creusot/tests/should_fail/prusti/logic/home_mismatch2.stderr
error[creusot]: function was supposed to return data with home/lifetime `'y` but it is returning data with home/lifetime `'x`
 --> home_mismatch2.rs:6:5
  |
6 |     x
  |     ^

error: aborting due to previous error

